# N-Vision

./: README.md
decoder/: .gitignore  CMakeLists.txt  README.md  boot.dsl  decoder.c  decoder_csv.c  main.c  nokia.csv  trace.csv
firmware/: .gitignore  CMakeLists.txt
firmware/assets/: frame_buffer_rgb565.h
firmware/src/: main.c  ngage.c  ngage_lcd.h  ngage_lcd.pio
hardware/: BOM.md
hardware/N-Vision/: N-Vision.kicad_pcb  N-Vision.kicad_prl  N-Vision.kicad_pro  N-Vision.kicad_sch
hardware/libraries/footprints.pretty/: CONN_54722-0164_MOL.kicad_mod  CONN_55560-0168_MOL.kicad_mod  FPC-16P-0.5mm.kicad_mod
